--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recipe App</title>
 
-    Bootstrap CSS -->
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
 
-    SweetAlert CSS -->
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css"
     />
 
-    SweetAlert JavaScript -->
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
   </head>
   <body>
-    Navigation Bar -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Recipe App</a>
+      <a class="navbar-brand" href="#"><img src="./img/loGGGGGo.png" width="100"></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -62,14 +62,14 @@
       </div>
     </nav>
 
-    Screens -->
-    <div id="app">Content will be loaded here based on navigation --></div>
 
-    jQuery and Bootstrap JavaScript -->
+    <div id="app"></div>
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    Your custom JS here -->
+
     <script>
       $(document).ready(function () {
         // Load user information on each page load
