--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recipe App</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       html,
       body {
         height: 100%;
         margin: 0;
         padding: 0;
+        font-family: "Montserrat", sans-serif !important;
       }
 
       .wrapper {
@@ -27,13 +33,15 @@
         padding: 20px 0;
         text-align: center;
       }
+
       .wrapper {
-        background-image: url("https://images.pexels.com/photos/349610/pexels-photo-349610.jpeg?cs=srgb&dl=pexels-lukas-349610.jpg&fm=jpg");
+        background-image: url("https://coolbackgrounds.io/images/backgrounds/white/white-triangle-369b8d2d.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
       }
     </style>
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -49,7 +57,7 @@
     <div class="wrapper">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-          <img src="./img/logo.png" width="100" />
+          <img src="./img/logo.png" width="75" />
         </a>
         <button
           class="navbar-toggler"
@@ -65,25 +73,31 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="#home">🏠 Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#recipes">Recipes</a>
+              <a class="nav-link" href="#recipes">🍲 Recipes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#aboutus">About Us</a>
+              <a class="nav-link" href="#aboutus">ℹ️ About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#users">👩‍🍳 Our Chefs</a>
+            </li>
+            <li class="nav-item" id="favoritesLink" style="display: none">
+              <a class="nav-link" href="#favorites">⭐ Favorites</a>
             </li>
             <li class="nav-item" id="loginLink">
-              <a class="nav-link" href="#login">Login</a>
+              <a class="nav-link" href="#login">🔐 Login</a>
             </li>
             <li class="nav-item" id="registerLink">
-              <a class="nav-link" href="#register">Register</a>
+              <a class="nav-link" href="#register">📝 Register</a>
             </li>
             <li class="nav-item" id="profileLink" style="display: none">
-              <a class="nav-link" href="#profile">My Profile</a>
+              <a class="nav-link" href="#profile">👤 My Profile</a>
             </li>
             <li class="nav-item" id="logoutLink" style="display: none">
-              <a class="nav-link" href="#logout">Logout</a>
+              <a class="nav-link" href="#logout">🔓 Logout</a>
             </li>
           </ul>
         </div>
@@ -117,7 +131,9 @@
             var user = response;
             $("#profileLink").show();
 
-            $("#logoutLink").show(); // <-- Added this line
+            $("#logoutLink").show();
+            $("#favoritesLink").show();
+
             $("#loginLink, #registerLink").hide();
           },
 
