--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,13 @@
-<div class="container mt-5">
-  <h1 id="welcomeMessage">Welcome to Recipe App!</h1>
+<div class="container mt-5 text-center">
+  <h1 id="welcomeMessage">Welcome to the best Food Recipe website!</h1>
   <p>This is your home for the most delicious recipes on the web.</p>
+  <h3 class="mt-3 mb-3">Here are our top 3 recipes picked just for you! 😇</h3>
+  <div id="featuredRecipes" class="row"></div>
 </div>
 
 <script>
   $(document).ready(function () {
+    // Fetch user data and update welcome message
     $.ajax({
       type: "GET",
       url: "http://localhost/food-recipe-app/rest/me",
@@ -16,5 +19,60 @@
         $("#welcomeMessage").html("Welcome, " + user.username + "!");
       },
     });
+
+    // Fetch featured recipes
+    $.ajax({
+      type: "GET",
+      url: "http://localhost/food-recipe-app/rest/recipes",
+      success: function (response) {
+        var recipes = response.recipes; // Get the recipes array from the response
+
+        // Shuffle the array of recipes
+        shuffleArray(recipes);
+
+        // Display 3 featured recipes
+        var featuredRecipes = recipes.slice(0, 3);
+        var featuredRecipesHtml = "";
+
+        featuredRecipes.forEach(function (recipe) {
+          featuredRecipesHtml += `
+            <div class="col-lg-4 col-md-6">
+              <div class="card mb-4">
+                <img src="${recipe.img_url}" class="card-img-top" alt="${recipe.title}" style="height: 200px; object-fit: cover;">
+                <div class="card-body">
+                  <h5 class="card-title">${recipe.title}</h5>
+                  <p class="card-text">${recipe.description}</p>
+                  <button class="btn btn-primary" data-id="${recipe.id}">View Recipe</button>
+                </div>
+              </div>
+            </div>
+          `;
+        });
+
+        $("#featuredRecipes").html(featuredRecipesHtml);
+
+        // Add click event for View Recipe button
+        $(".btn-primary").on("click", function (e) {
+          e.stopPropagation();
+          let recipeId = $(this).data("id");
+          // Fetch and insert the single recipe view into the #app container
+          $("#app").load(`/food-recipe-app/pages/recipe.html`, function () {
+            $.getScript("/food-recipe-app/js/recipe.js", function () {
+              loadRecipe(recipeId);
+            });
+          });
+        });
+      },
+    });
+
+    // Function to shuffle an array using Fisher-Yates algorithm
+    function shuffleArray(array) {
+      for (var i = array.length - 1; i > 0; i--) {
+        var j = Math.floor(Math.random() * (i + 1));
+        var temp = array[i];
+        array[i] = array[j];
+        array[j] = temp;
+      }
+    }
   });
 </script>
