--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -1,4 +1,10 @@
 <div class="container mt-5">
+  <script
+    defer
+    src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+    integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
+    crossorigin="anonymous"
+  ></script>
   <h1>Our Recipes</h1>
   <p>Here you can find our recipes.</p>
 
@@ -22,13 +28,16 @@
 <style>
   .card {
     max-width: 24rem;
-    cursor: pointer;
   }
 
   .card-img-top {
     width: 100%;
     height: 10vw;
     object-fit: cover;
+  }
+
+  .favorite {
+    color: #ffbf00;
   }
 </style>
 
@@ -41,24 +50,31 @@
       $.ajax({
         type: "GET",
         url: `http://localhost/food-recipe-app/rest/recipes?page=${page}&itemsPerPage=${itemsPerPage}&searchText=${searchText}`,
+        headers: {
+          Authorization: "Bearer " + localStorage.getItem("token"),
+        },
         success: function (data) {
           let recipeCards = "";
 
           data.recipes.forEach((recipe) => {
+            let isFavorite = recipe.isFavorite ? "favorite" : "";
+            let star = `<i class="fa fa-star ${isFavorite}" style="cursor: pointer;" data-id="${recipe.id}"></i>`;
             recipeCards += `
-                          <div class="col-12 col-md-6 col-lg-3 mb-5 recipe-card" data-id="${recipe.id}">
-                              <div class="card h-100">
-                                  <img src="${recipe.img_url}" class="card-img-top" alt="Recipe Image">
-                                  <div class="card-body">
-                                      <h5 class="card-title">${recipe.title}</h5>
-                                      <p class="card-text">${recipe.description}</p>
-                                  </div>
-                                  <div class="card-footer">
-                                      <small class="text-muted">Preparation time: <b>${recipe.prep_time}</b></small>
-                                  </div>
-                              </div>
-                          </div>
-                      `;
+            <div class="col-12 col-md-6 col-lg-3 mb-5">
+              <div class="card h-100">
+                <img src="${recipe.img_url}" class="card-img-top" alt="Recipe Image">
+                <div class="card-body">
+                  <h5 class="card-title">${recipe.title}</h5>
+                  <p class="card-text">${recipe.description}</p>
+                  <button class="btn btn-primary" data-id="${recipe.id}">View Recipe</button>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Preparation time: <b>${recipe.prep_time}</b></small>
+                  ${star}
+                </div>
+              </div>
+            </div>
+          `;
           });
 
           let pagination = "";
@@ -70,6 +86,57 @@
 
           $("#recipesRow").html(recipeCards);
           $("#pagination").html(pagination);
+
+          // Add click event for View Recipe button
+          $(".btn-primary").on("click", function (e) {
+            e.stopPropagation();
+            let recipeId = $(this).data("id");
+            // Fetch and insert the single recipe view into the #app container
+            $("#app").load(`/food-recipe-app/pages/recipe.html`, function () {
+              $.getScript("/food-recipe-app/js/recipe.js", function () {
+                loadRecipe(recipeId);
+              });
+            });
+          });
+
+          // Add click event for stars
+          $("#recipesRow").on("click", ".fa-star", function (e) {
+            e.stopPropagation();
+            let recipeId = $(this).data("id");
+            let isFavorite = $(this).hasClass("favorite");
+            let starElement = $(this); // Store $(this) in a variable
+
+            if (isFavorite) {
+              // Remove from favorites
+              $.ajax({
+                url: `http://localhost/food-recipe-app/rest/favorites/me`,
+                type: "DELETE",
+                data: JSON.stringify({ recipe_id: recipeId }),
+                contentType: "application/json", // Set the content type to JSON
+
+                headers: {
+                  Authorization: "Bearer " + localStorage.getItem("token"),
+                },
+                success: function () {
+                  starElement.removeClass("favorite"); // Use the stored variable
+                },
+              });
+            } else {
+              $.ajax({
+                url: `http://localhost/food-recipe-app/rest/favorites/me`,
+                type: "POST",
+                data: JSON.stringify({ recipe_id: recipeId }),
+                contentType: "application/json", // Set the content type to JSON
+
+                headers: {
+                  Authorization: "Bearer " + localStorage.getItem("token"),
+                },
+                success: function () {
+                  starElement.addClass("favorite"); // Use the stored variable
+                },
+              });
+            }
+          });
         },
         error: function (xhr, status, error) {
           console.error("Error occurred while fetching recipes: ", error);
@@ -92,11 +159,5 @@
         loadRecipes(currentPage, itemsPerPage, $(this).val());
       }, 300)
     );
-
-    // Handle click event on recipe card to load the single recipe view
-    $(document).on("click", ".recipe-card", function (e) {
-      let recipeId = $(this).data("id");
-      window.location.href = `/food-recipe-app/pages/recipe.html?id=${recipeId}`;
-    });
   });
 </script>
