--- a/pages/register.html
+++ b/pages/register.html
@@ -57,80 +57,4 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 
-<script>
-  $(document).ready(function () {
-    $("#registerForm").submit(function (event) {
-      event.preventDefault();
-      var username = $("#registerUsername").val();
-      var password = $("#registerPassword").val();
-      var firstName = $("#registerFirstName").val();
-      var lastName = $("#registerLastName").val();
-      var email = $("#registerEmail").val();
-
-      // Perform client-side validation
-      if (!validateFields(username, password, firstName, lastName, email)) {
-        return;
-      }
-
-      // Prepare the data to be sent
-      var data = {
-        username: username,
-        password: password,
-        first_name: firstName,
-        last_name: lastName,
-        email: email,
-      };
-
-      // Perform the AJAX POST request
-      $.ajax({
-        url: "http://localhost/food-recipe-app/rest/register",
-        type: "POST",
-        contentType: "application/json",
-        data: JSON.stringify(data),
-        success: function (response) {
-          // Registration successful
-          Swal.fire({
-            icon: "success",
-            title: "Registration Successful",
-            text: "You have successfully registered.",
-          }).then(function () {
-            // Redirect to the login page
-            window.location.href = "login.html"; // Navigate to home.html
-            location.reload(); // Refresh the page
-          });
-        },
-        error: function (xhr, status, error) {
-          // Registration failed
-          Swal.fire({
-            icon: "error",
-            title: "Registration Failed",
-            text: "Sorry, there was an error during registration.",
-          });
-        },
-      });
-    });
-
-    function validateFields(username, password, firstName, lastName, email) {
-      // Add your field validation logic here
-      // Example validation: Check if any field is empty
-      if (
-        username === "" ||
-        password === "" ||
-        firstName === "" ||
-        lastName === "" ||
-        email === ""
-      ) {
-        Swal.fire({
-          icon: "error",
-          title: "Validation Error",
-          text: "Please fill in all fields.",
-        });
-        return false;
-      }
-
-      // Additional validation rules can be added as needed
-
-      return true;
-    }
-  });
-</script>
+<script src="/food-recipe-app/js/register.js"></script>
