--- a/pages/login.html
+++ b/pages/login.html
@@ -1,4 +1,3 @@
-<!-- Include SweetAlert CSS -->
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css"
@@ -29,52 +28,7 @@
   </form>
 </div>
 
-<!-- Include SweetAlert and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
 
-<script>
-  $(document).ready(function () {
-    // Handle login form submission
-    $("#loginForm").submit(function (e) {
-      e.preventDefault();
-
-      var username = $("#loginUsername").val();
-      var password = $("#loginPassword").val();
-
-      $.ajax({
-        type: "POST",
-        url: "http://localhost/food-recipe-app/rest/login",
-        data: {
-          username: username,
-          password: password,
-        },
-        success: function (response) {
-          // Save token in localStorage or as a cookie
-          localStorage.setItem("token", response.token);
-
-          // Show success notification and redirect to home on close
-          Swal.fire({
-            title: "Login Successful",
-            text: "You have successfully logged in.",
-            icon: "success",
-          }).then((result) => {
-            if (result.isConfirmed) {
-              window.location.href = "home.html"; // Navigate to home.html
-              location.reload(); // Refresh the page
-            }
-          });
-        },
-        error: function (xhr, status, error) {
-          if (xhr.status === 401) {
-            Swal.fire({
-              title: "Login Failed",
-              text: "Invalid username or password.",
-              icon: "error",
-            });
-          }
-        },
-      });
-    });
-  });
-</script>
+<script src="/food-recipe-app/js/login.js"></script>
