--- a/pages/profile.html
+++ b/pages/profile.html
@@ -84,7 +84,6 @@
           role="tabpanel"
           aria-labelledby="settings-tab"
         >
-          <!-- Profile Form -->
           <form id="profileForm" class="mt-3">
             <div class="form-group">
               <label for="firstName">First Name</label>
@@ -143,7 +142,6 @@
           role="tabpanel"
           aria-labelledby="add-recipe-tab"
         >
-          <!-- Add Recipe Form -->
           <form id="addRecipeForm" class="mt-3">
             <div class="form-group">
               <label for="title">Title</label>
@@ -203,7 +201,6 @@
                 name="category_id"
                 required
               >
-                <!-- Categories dropdown options will be dynamically populated here -->
               </select>
             </div>
             <button type="submit" class="btn btn-primary">Add Recipe</button>
@@ -215,7 +212,6 @@
           role="tabpanel"
           aria-labelledby="my-recipes-tab"
         >
-          <!-- My Recipes will be rendered here -->
           <div
             id="myRecipesRow"
             class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4"
@@ -224,7 +220,6 @@
       </div>
     </div>
 
-    <!-- Edit Recipe Modal -->
     <div
       class="modal fade"
       id="editRecipeModal"
@@ -322,372 +317,6 @@
       </div>
     </div>
 
-    <script>
-      $(document).ready(function () {
-        // Make an AJAX GET request to fetch categories
-        $.ajax({
-          url: "http://localhost/food-recipe-app/rest/categories",
-          type: "GET",
-          headers: {
-            Authorization: "Bearer " + localStorage.getItem("token"),
-          },
-          success: function (response) {
-            if (response && response.length > 0) {
-              // Iterate over the categories and generate the dropdown options
-              response.forEach(function (category) {
-                $("#category_id").append(
-                  $("<option></option>")
-                    .attr("value", category.id)
-                    .text(category.name)
-                );
-              });
-
-              response.forEach(function (category) {
-                $("#editCategory").append(
-                  $("<option></option>")
-                    .attr("value", category.id)
-                    .text(category.name)
-                );
-              });
-            }
-          },
-          error: function (xhr, textStatus, errorThrown) {
-            // Handle error response
-            console.log(xhr.status + ": " + xhr.responseText);
-          },
-        });
-
-        $(document).ready(function () {
-          $("#deleteAccountBtn").click(function () {
-            Swal.fire({
-              title: "Are you sure?",
-              text: "You won't be able to revert this!",
-              icon: "warning",
-              showCancelButton: true,
-              confirmButtonColor: "#3085d6",
-              cancelButtonColor: "#d33",
-              confirmButtonText: "Yes, delete it!",
-            }).then((result) => {
-              if (result.isConfirmed) {
-                $.ajax({
-                  type: "DELETE",
-                  url: "http://localhost/food-recipe-app/rest/me",
-                  headers: {
-                    Authorization: "Bearer " + localStorage.getItem("token"),
-                  },
-                  success: function (response) {
-                    Swal.fire(
-                      "Deleted!",
-                      "Your account has been deleted.",
-                      "success"
-                    );
-                    // Logout the user
-                    localStorage.removeItem("token");
-                    location.reload();
-                  },
-                  error: function (xhr, status, error) {
-                    Swal.fire(
-                      "Failed!",
-                      "Failed to delete your account.",
-                      "error"
-                    );
-                  },
-                });
-              }
-            });
-          });
-
-          $.ajax({
-            type: "GET",
-            url: "http://localhost/food-recipe-app/rest/me",
-            headers: {
-              Authorization: "Bearer " + localStorage.getItem("token"),
-            },
-            success: function (response) {
-              $("#firstName").val(response.first_name);
-              $("#lastName").val(response.last_name);
-              $("#username").val(response.username);
-              $("#email").val(response.email);
-            },
-          });
-
-          $("#profileForm").submit(function (e) {
-            e.preventDefault();
-
-            var firstName = $("#firstName").val();
-            var lastName = $("#lastName").val();
-            var username = $("#username").val();
-            var email = $("#email").val();
-            var password = $("#password").val();
-
-            $.ajax({
-              type: "POST",
-              url: "http://localhost/food-recipe-app/rest/me",
-              headers: {
-                Authorization: "Bearer " + localStorage.getItem("token"),
-              },
-              data: {
-                first_name: firstName,
-                last_name: lastName,
-                username: username,
-                email: email,
-                password: password,
-              },
-              success: function (response) {
-                Swal.fire({
-                  title: "Profile Updated",
-                  text: "Your profile has been updated successfully.",
-                  icon: "success",
-                });
-              },
-              error: function (xhr, status, error) {
-                Swal.fire({
-                  title: "Update Failed",
-                  text: "Something went wrong. Please try again.",
-                  icon: "error",
-                });
-              },
-            });
-          });
-
-          // Add recipe form submission
-          $("#addRecipeForm").submit(function (e) {
-            e.preventDefault();
-
-            var title = $("#title").val();
-            var description = $("#description").val();
-            var instructions = $("#instructions").val();
-            var imageURL = $("#imageURL").val();
-            var prepTime = $("#prep_time").val();
-            var categoryId = $("#category_id").val(); // Get the selected category ID
-
-            var recipeData = {
-              title: title,
-              description: description,
-              instructions: instructions,
-              img_url: imageURL,
-              prep_time: prepTime,
-              category_id: categoryId,
-            };
-
-            $.ajax({
-              type: "POST",
-              url: "http://localhost/food-recipe-app/rest/recipe",
-              headers: {
-                Authorization: "Bearer " + localStorage.getItem("token"),
-              },
-              data: recipeData,
-              success: function (response) {
-                // Handle success response
-                console.log("Recipe added successfully:", response);
-
-                loadMyRecipes();
-
-                // Reset the form fields
-                $("#addRecipeForm")[0].reset();
-                // Show a success message to the user
-                Swal.fire({
-                  title: "Recipe Added",
-                  text: "Your recipe has been added successfully.",
-                  icon: "success",
-                });
-              },
-              error: function (xhr, status, error) {
-                // Handle error response
-                console.error("Failed to add recipe:", error);
-                // Show an error message to the user
-                Swal.fire({
-                  title: "Error",
-                  text: "Failed to add recipe. Please try again later.",
-                  icon: "error",
-                });
-              },
-            });
-          });
-
-          // Load user's recipes
-          function loadMyRecipes() {
-            $.ajax({
-              type: "GET",
-              url: "http://localhost/food-recipe-app/rest/recipes/me",
-              headers: {
-                Authorization: "Bearer " + localStorage.getItem("token"),
-              },
-              success: function (response) {
-                // Assume the response is an array of recipes
-                var recipesHtml = response
-                  .map(function (recipe) {
-                    return `
-              <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5">
-                <div class="card h-100">
-                  <img src="${recipe.img_url}" class="card-img-top" alt="Recipe image">
-                  <div class="card-body">
-                    <h5 class="card-title">${recipe.title}</h5>
-                    <p class="card-text">${recipe.description}</p>
-                    <div class="d-flex justify-content-end">
-                      <button class="btn btn-danger btn-sm mx-1 delete-recipe" data-recipe-id="${recipe.id}">
-                        <i class="fas fa-trash"></i>
-                      </button>
-                      <button class="btn btn-primary btn-sm mx-1 edit-recipe" data-recipe-id="${recipe.id}">
-                        <i class="fas fa-edit"></i>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              `;
-                  })
-                  .join("");
-
-                if (response.length == 0) {
-                  recipesHtml = "You don't have any recipes added.";
-                }
-
-                $("#myRecipesRow").html(recipesHtml);
-
-                // Attach event listeners to the delete and edit buttons
-                $(".delete-recipe").click(function () {
-                  var recipeId = $(this).data("recipe-id");
-                  deleteRecipe(recipeId);
-                });
-
-                $(".edit-recipe").click(function () {
-                  var recipeId = $(this).data("recipe-id");
-                  var recipe = response.find(function (recipe) {
-                    return recipe.id === recipeId;
-                  });
-                  editRecipe(recipe);
-                });
-              },
-              error: function (xhr, status, error) {
-                Swal.fire({
-                  title: "Loading Failed",
-                  text: "Failed to load your recipes.",
-                  icon: "error",
-                });
-              },
-            });
-          }
-
-          function deleteRecipe(recipeId) {
-            // Confirm delete action
-            Swal.fire({
-              title: "Delete Recipe",
-              text: "Are you sure you want to delete this recipe?",
-              icon: "warning",
-              showCancelButton: true,
-              confirmButtonText: "Delete",
-              cancelButtonText: "Cancel",
-            }).then((result) => {
-              if (result.isConfirmed) {
-                // Make a DELETE request to delete the recipe
-                $.ajax({
-                  type: "DELETE",
-                  url: `http://localhost/food-recipe-app/rest/recipe/${recipeId}`,
-                  headers: {
-                    Authorization: "Bearer " + localStorage.getItem("token"),
-                  },
-                  success: function (response) {
-                    // Recipe deleted successfully
-                    Swal.fire({
-                      title: "Recipe Deleted",
-                      text: "The recipe has been deleted successfully.",
-                      icon: "success",
-                    });
-                    // Refresh the recipes
-                    loadMyRecipes();
-                  },
-                  error: function (xhr, status, error) {
-                    // Failed to delete the recipe
-                    Swal.fire({
-                      title: "Delete Failed",
-                      text: "Failed to delete the recipe. Please try again.",
-                      icon: "error",
-                    });
-                  },
-                });
-              }
-            });
-          }
-
-          // Open the Edit Recipe modal
-          function editRecipe(recipe) {
-            // Populate the form fields with recipe data
-            $("#editTitle").val(recipe.title);
-            $("#editDescription").val(recipe.description);
-            $("#editInstructions").val(recipe.instructions);
-            $("#editImageURL").val(recipe.img_url);
-            $("#editPrepTime").val(recipe.prep_time);
-            $("#editCategory").val(recipe.category_id);
-
-            // Set the recipeId in the data attribute of the modal
-            $("#editRecipeModal").data("recipe-id", recipe.id);
-
-            // Show the Edit Recipe modal
-            $("#editRecipeModal").modal("show");
-          }
-
-          // Edit recipe form submission
-          $("#editRecipeForm").submit(function (e) {
-            e.preventDefault();
-
-            var title = $("#editTitle").val();
-            var description = $("#editDescription").val();
-            var instructions = $("#editInstructions").val();
-            var imageURL = $("#editImageURL").val();
-            var prepTime = $("#editPrepTime").val();
-            var categoryId = $("#editCategory").val();
-
-            var recipeData = {
-              title: title,
-              description: description,
-              instructions: instructions,
-              img_url: imageURL,
-              prep_time: prepTime,
-              category_id: categoryId,
-            };
-
-            var recipeId = $("#editRecipeModal").data("recipe-id");
-
-            $.ajax({
-              type: "PUT",
-              contentType: "application/json",
-
-              url: "http://localhost/food-recipe-app/rest/recipe/" + recipeId,
-              headers: {
-                Authorization: "Bearer " + localStorage.getItem("token"),
-              },
-              data: JSON.stringify(recipeData),
-              success: function (response) {
-                // Handle success response
-                console.log("Recipe updated successfully:", response);
-                // Close the modal
-                $("#editRecipeModal").modal("hide");
-                // Show a success message to the user
-                Swal.fire({
-                  title: "Recipe Updated",
-                  text: "Your recipe has been updated successfully.",
-                  icon: "success",
-                });
-                // Reload the recipes
-                loadMyRecipes();
-              },
-              error: function (xhr, status, error) {
-                // Handle error response
-                console.error("Failed to update recipe:", error);
-                // Show an error message to the user
-                Swal.fire({
-                  title: "Error",
-                  text: "Failed to update recipe. Please try again later.",
-                  icon: "error",
-                });
-              },
-            });
-          });
-
-          loadMyRecipes(); // Load the recipes when the page loads
-        });
-      });
-    </script>
+    <script src="/food-recipe-app/js/profile.js"></script>
   </body>
 </html>
