files paths updated

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,4 +5,4 @@
   <div id="featuredRecipes" class="row"></div>
 </div>
 
-<script src="/food-recipe-app/js/home.js"></script>
+<script src="js/home.js"></script>
