--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -27,4 +27,4 @@
     color: amber;
   }
 </style>
-<script src="/food-recipe-app/js/favorites.js"></script>
+<script src="/js/favorites.js"></script>
