--- a/pages/login.html
+++ b/pages/login.html
@@ -31,4 +31,4 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
 
-<script src="/food-recipe-app/js/login.js"></script>
+<script src="/js/login.js"></script>
