--- a/pages/register.html
+++ b/pages/register.html
@@ -57,4 +57,4 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 
-<script src="/food-recipe-app/js/register.js"></script>
+<script src="/js/register.js"></script>
